# gen-ai

./: QUICK-START.md  README.md  WORKFLOW.md  sync-project.sh
code-assistant/: .gitignore  README.md  code_assistant.py  learning_manager.py  requirements.txt  test_modules.py
protein-food-finder/: .gitignore  DYNAMIC_ARCHITECTURE.md  MEMORY_CACHE.md  README.md  REFACTOR_SUMMARY.md  REPORT_FORMAT.md  pyproject.toml  test_gemini.py
protein-food-finder/output/: protein_recommendations.md
protein-food-finder/src/protien_food_finder/: crew.py  main.py  structured_outputs.py
protein-food-finder/src/protien_food_finder/config/: agents.yaml  tasks.yaml
shopping-list-mcp/: README.md  shopping_agent.py  shopping_list.py
tech-talk-generator/: README.md  package.json  vercel.json
tech-talk-generator/api/: index.py
tech-talk-generator/pages/: index.tsx
