[project]
name = "protien_food_finder"
version = "0.1.0"
description = "protien_food_finder using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.159.0,<1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
protien_food_finder = "protien_food_finder.main:run"
run_crew = "protien_food_finder.main:run"
train = "protien_food_finder.main:train"
replay = "protien_food_finder.main:replay"
test = "protien_food_finder.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
